fix spacing

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -444,7 +444,7 @@ form .escola-details{
 }
 
 #horario_funcMin, #horario_funcMax{
-    width: 20%;
+    width: 30%;
 }
 
 .modalidade{
